# project-akhir-struktur-data-grup-b-d-mks

./: README.md  Tahap1.py  api_service.py  coba.py  cobafinal.py  components.py  config.py  export_service.py  main.py  pages.py  percobaan ganti beranda.txt  pyproject.toml  requirements.txt
movie-ai/: index.html  package-lock.json  package.json
