[project]
name = "project-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "google-generativeai>=0.8.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "plotly>=5.24.1",
    "typing-extensions>=4.12.2"
]
